add_subdirectory(cpu)
if(${CONFIG_OS_ARCH_ARMV8})
    add_subdirectory(drv)
endif()

set (SRC_ARCH_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
set (DRIVERS_BASE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../drivers)
set (FS_BASE_DIR  ${CMAKE_CURRENT_SOURCE_DIR}/../fs)
if (${CONFIG_OS_OPTION_NUTTX_UART})
    if(${CONFIG_OS_OPTION_STM32F407_UART})
        add_subdirectory(arm/src/stm32)
    endif()
endif()
